--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
   <style>
-    body, html { margin: 0; padding: 0; height: 100%; }
+    body, html { margin: 0; padding: 0; height: 100%; font-family: Arial, sans-serif; }
     #map { height: 100%; }
     #sidebar {
       position: absolute;
@@ -20,11 +20,23 @@
       z-index: 1000;
       box-shadow: 2px 0 5px rgba(0,0,0,0.3);
     }
-    .input-group { margin-bottom: 10px; }
+    .input-group { margin-bottom: 15px; }
     .input-group input, .input-group select, .input-group button {
       width: 100%;
-      padding: 8px;
+      padding: 10px;
       margin-top: 5px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 14px;
+    }
+    .input-group button {
+      background-color: #4CAF50;
+      color: white;
+      cursor: pointer;
+      border: none;
+    }
+    .input-group button:hover {
+      background-color: #45a049;
     }
   </style>
 </head>
@@ -67,6 +79,7 @@
       <option value="park">Park</option>
     </select>
     <button onclick="enableAddMode()">Enable Add Mode</button>
+    <button onclick="cancelAddMode()">Cancel Add Mode</button>
   </div>
 
   <hr>
@@ -92,10 +105,15 @@
     appId: "1:000000000000:web:abcdef123456"
   };
   firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
+  let db;
+  try {
+    db = firebase.firestore();
+  } catch (e) {
+    alert("Firestore initialization failed: " + e.message);
+  }
 
   let map = L.map('map').setView([20.59, 78.96], 5);
-  let osm = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
+  let osm = L.tileLayer('https://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png');
   let satellite = L.tileLayer('https://{s}.google.com/vt/lyrs=s&x={x}&y={y}&z={z}', {
     subdomains:['mt0','mt1','mt2','mt3']
   });
@@ -114,13 +132,14 @@
   }
 
   let liveMarker;
+  let liveLatLng = null;
   navigator.geolocation.watchPosition(pos => {
-    let latlng = [pos.coords.latitude, pos.coords.longitude];
+    liveLatLng = [pos.coords.latitude, pos.coords.longitude];
     if (!liveMarker) {
-      liveMarker = L.marker(latlng).addTo(map).bindPopup("You are here").openPopup();
-      map.setView(latlng, 15);
+      liveMarker = L.marker(liveLatLng).addTo(map).bindPopup("You are here").openPopup();
+      map.setView(liveLatLng, 15);
     } else {
-      liveMarker.setLatLng(latlng);
+      liveMarker.setLatLng(liveLatLng);
     }
   });
 
@@ -129,9 +148,13 @@
     addMode = true;
     alert("Click on the map to add the place.");
   }
+  function cancelAddMode() {
+    addMode = false;
+    alert("Add mode cancelled.");
+  }
 
   map.on('click', async function(e) {
-    if (addMode) {
+    if (addMode && db) {
       const name = document.getElementById('placeName').value;
       const type = document.getElementById('placeType').value;
       const icons = {
@@ -141,29 +164,38 @@
       };
       const marker = L.marker(e.latlng).addTo(map)
         .bindPopup(`<b>${icons[type]} ${name}</b><br>Type: ${type}`).openPopup();
-      await db.collection("places").add({
-        name: name,
-        type: type,
-        lat: e.latlng.lat,
-        lng: e.latlng.lng
-      });
+      try {
+        await db.collection("places").add({
+          name: name,
+          type: type,
+          lat: e.latlng.lat,
+          lng: e.latlng.lng
+        });
+      } catch (err) {
+        alert("Failed to save place: " + err.message);
+      }
       addMode = false;
     }
   });
 
   async function loadPlaces() {
-    const snap = await db.collection("places").get();
-    snap.forEach(doc => {
-      const data = doc.data();
-      const icons = {
-        building: "🏢",
-        hospital: "🏥",
-        park: "🌳"
-      };
-      L.marker([data.lat, data.lng])
-        .addTo(map)
-        .bindPopup(`<b>${icons[data.type]} ${data.name}</b><br>Type: ${data.type}`);
-    });
+    if (!db) return;
+    try {
+      const snap = await db.collection("places").get();
+      snap.forEach(doc => {
+        const data = doc.data();
+        const icons = {
+          building: "🏢",
+          hospital: "🏥",
+          park: "🌳"
+        };
+        L.marker([data.lat, data.lng])
+          .addTo(map)
+          .bindPopup(`<b>${icons[data.type]} ${data.name}</b><br>Type: ${data.type}`);
+      });
+    } catch (err) {
+      alert("Failed to load places: " + err.message);
+    }
   }
   loadPlaces();
 
@@ -174,36 +206,41 @@
     const vehicle = document.getElementById('vehicle').value;
 
     let fromCoords, toCoords;
+    try {
+      if (fromType === 'live') {
+        if (!liveLatLng) throw new Error("Live location not ready");
+        fromCoords = [liveLatLng[1], liveLatLng[0]];
+      } else {
+        let parts = document.getElementById('fromInput').value.split(',');
+        fromCoords = [parseFloat(parts[1]), parseFloat(parts[0])];
+      }
 
-    if (fromType === 'live') {
-      fromCoords = [liveMarker.getLatLng().lng, liveMarker.getLatLng().lat];
-    } else {
-      let parts = document.getElementById('fromInput').value.split(',');
-      fromCoords = [parseFloat(parts[1]), parseFloat(parts[0])];
+      if (toType === 'live') {
+        if (!liveLatLng) throw new Error("Live location not ready");
+        toCoords = [liveLatLng[1], liveLatLng[0]];
+      } else {
+        let parts = document.getElementById('toInput').value.split(',');
+        toCoords = [parseFloat(parts[1]), parseFloat(parts[0])];
+      }
+
+      const res = await fetch(`https://api.openrouteservice.org/v2/directions/${vehicle}/geojson`, {
+        method: 'POST',
+        headers: {
+          'Authorization': '5b3ce3597851110001cf6248fec159fe83b8499780345040ac229607',
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({ coordinates: [fromCoords, toCoords] })
+      });
+      const data = await res.json();
+
+      if (routeLayer) map.removeLayer(routeLayer);
+      routeLayer = L.geoJSON(data).addTo(map);
+
+      const duration = data.features[0].properties.summary.duration / 60;
+      document.getElementById("timeEstimate").innerText = `Approx time: ${duration.toFixed(2)} minutes`;
+    } catch (err) {
+      alert("Error finding route: " + err.message);
     }
-
-    if (toType === 'live') {
-      toCoords = [liveMarker.getLatLng().lng, liveMarker.getLatLng().lat];
-    } else {
-      let parts = document.getElementById('toInput').value.split(',');
-      toCoords = [parseFloat(parts[1]), parseFloat(parts[0])];
-    }
-
-    const res = await fetch(`https://api.openrouteservice.org/v2/directions/${vehicle}/geojson`, {
-      method: 'POST',
-      headers: {
-        'Authorization': 'YOUR_ORS_API_KEY',
-        'Content-Type': 'application/json'
-      },
-      body: JSON.stringify({ coordinates: [fromCoords, toCoords] })
-    });
-    const data = await res.json();
-
-    if (routeLayer) map.removeLayer(routeLayer);
-    routeLayer = L.geoJSON(data).addTo(map);
-
-    const duration = data.features[0].properties.summary.duration / 60;
-    document.getElementById("timeEstimate").innerText = `Approx time: ${duration.toFixed(2)} minutes`;
   }
 </script>
 </body>
